[metadata]
name = luffa-bot-python-sdk
version = 0.1.0
description = Async, OpenAI-style Python SDK for building Luffa bots
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Niraj Kulkarni (Sabma Labs, University of Surrey)
author_email = niraj.kulkarni@luffa.im
url = https://github.com/sabma-labs/luffa-bot-python-sdk
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Internet :: WWW/HTTP
    Framework :: AsyncIO
    Typing :: Typed

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.9
install_requires =
    httpx>=0.27
    anyio>=4.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    luffa-bot = luffa_bot.cli:main

[tool:pytest]
addopts = -q
testpaths = tests

[options.extras_require]
dev =
    pytest>=8
    pytest-asyncio>=0.23
    respx>=0.21
    ruff>=0.5
    mypy>=1.7
